--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ header {
   background-image: linear-gradient(#0d508f80, #001c5879), url("../image/image30.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
+  padding-left: 2%;
 }
 
 header img {
@@ -48,11 +49,7 @@ header button {
   height: 33px;
   border-radius: 10%;
   margin-bottom: 15%;
-  margin-top: 0px;
-}
-
-header {
-  padding-left: 2%;
+  margin-top: 1px;
 }
 
 .act1 h5 {
@@ -73,7 +70,7 @@ header {
   background-color: lightgray;
 }
 
-.chapter2 img{
+.chapter2 img {
   width: 17%;
 }
 
@@ -81,12 +78,12 @@ header {
   background-image: linear-gradient(#172d2d93, #20385e6e), url("../image/image30.jpeg");
 }
 
-.pep1 h1{
+.pep1 h1 {
   text-align: center;
   color: white;
 }
 
-.pep1 button{
+.pep1 button {
   background-color: #0000ff03;
   border: solid white 1px;
   color: aliceblue;
@@ -94,7 +91,7 @@ header {
   height: 33px;
   border-radius: 10%;
   margin-bottom: 15%;
-  margin-top: 0px;
+  margin-top: 1px;
   margin-left: 27%;
 }
 
@@ -104,11 +101,11 @@ header {
 }
 
 .pep2 h3 {
- color: dodgerblue;
- text-align: center;
+  color: dodgerblue;
+  text-align: center;
 }
 
-.foden1-2 button{
+.foden1-2 button {
   background-color: #0000ff03;
   border: solid dodgerblue 1px;
   color: dodgerblue;
@@ -116,7 +113,7 @@ header {
   height: 33px;
   border-radius: 10%;
   margin-bottom: 15%;
-  margin-top: 0px;
+  margin-top: 1px;
   margin-left: 27%;
 }
 
@@ -182,6 +179,7 @@ header {
   border-radius: 0.3rem;
   box-shadow: 0 4px 2px #7f7e7e;
 }
+
 .chapter5 {
   background-color: #7f7e7e;
 }
@@ -230,10 +228,6 @@ header {
   box-shadow: 0 4px 2px #7f7e7e;
 }
 
-.messi img {
-  width: 35%;
-}
-
 .chapter4 img {
   width: 95%;
 }
@@ -242,20 +236,16 @@ header {
   background-color: #7f7e7e;
 }
 
-.chapter5 {
-  background-color: #7f7e7e;
-}
-
 .chapter5 img {
   width: 95%;
 }
 
-.neymar img{
+.neymar img {
   width: 35%;
 }
 
 .neymar {
-  text-align: center;;
+  text-align: center;
 }
 
 .neymat img {
@@ -278,8 +268,9 @@ header {
   background-color: #fff;
   border-radius: 0.3rem;
   box-shadow: 0 4px 2px #7f7e7e;
+}
 
-}.neymar1-3 {
+.neymar1-3 {
   padding: 1rem;
   margin: 14px;
   text-align: center;
@@ -309,7 +300,7 @@ header {
   height: 33px;
   border-radius: 10%;
   margin-bottom: 15%;
-  margin-top: 0px;
+  margin-top: 1px;
   margin-left: 27%;
 }
 
@@ -345,7 +336,7 @@ header {
 }
 
 .moyo img {
-  width: 95%; 
+  width: 95%;
 }
 
 .drogba1 img {
