--- a/css/style.css
+++ b/css/style.css
@@ -117,11 +117,11 @@ header button {
   margin-left: 27%;
 }
 
-.box img{
-  width: 40%;;
+.box img {
+  width: 40%;
 }
 
-.box{
+.box {
   background-color: #7f7e7e;
   margin-top: 10px;
 }
