--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,7 @@ header img {
 }
 
 .material-symbols-outlined {
-  font-variation-settings:
-    "FILL" 0,
-    "wght" 400,
-    "GRAD" 0,
-    "opsz" 24;
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 } 
 
 nav ul {
